/*
 * Copyright (c) Present Technologies Lda., All Rights Reserved.
 * (www.present-technologies.com)
 *
 * This software is the proprietary information of Present Technologies Lda.
 * Use is subject to license terms.
 */
package com.example.consumer;

import com.example.entities.Message;

public class Consumer {


    public void consume(Message message) {

    }
}
